app/assets/stylesheets/spaces-edit.css.scss
@import 'variables';
@import 'mixins';

#space {
  overflow: hidden;
  .height-100 {
    padding-bottom: 9999px;
    margin-bottom: -9999px;
  }
}

.verification-steps {
  background-color: $dark-white;
  border-right: 1px solid $gray;
  .status {
    border-bottom: 1px solid $gray;
    .status-text {
      text-transform: uppercase;
      display: inline-block;
      margin: 0 5px 10px 0;
      span {
        color: red;
      }
    }
    .progress-container {
      position: relative;
      width: 85%;
      margin-right: 5%;
      display: inline-block;
      height: 20px;
      vertical-align: middle;
      border: 2px solid $yellow;
      border-radius: 12px;
      overflow: hidden;
      .progress {
        position: absolute;
        left: 0;
        top: 0;
        bottom: 0;
        background-color: $yellow;
        border-radius: 0;
        box-shadow: none;
      }
    }
    .progress-counter {
        width: 10%;
        display: inline-block;
    }
  }
  ul {
    list-style: none;
    padding: 0;
    li {
      position: relative;
      padding: 20px;
      border-bottom: 1px solid $gray;
      &.done:after {
        content: '';
        position: absolute;
        right: 20px;
        top: 50%;
        width: 22px;
        height: 22px;
        transform: translateY(-50%);
        @include at2x('venue_profile_why_book', 22px, 22px); //TODO asset
      }
      p {
        margin-bottom: 0;
      }
    }
  }
  .status,
  .publish,
  .delete {
    padding: 15px;
  }
  .delete a {
    @include at2x('ic_profile_close', 22px, 22px); //TODO asset
    background-repeat: no-repeat;
    background-position: center left;
    padding-left: 25px;
    color: $gray;
  }
}

.details-section {
  .space-title {
    color: $black;
  }
  .share {
    margin: 20px 0;
    .share-text {
      padding: 4px 0;
      p {
        @include at2x('venue_profile_fbshare', 32px, 32px);
        background-repeat: no-repeat;
        padding: 0 0 0 55px;
        margin-bottom: 0;
        font-size: 16px;
        line-height: 32px;
        background-position: 15px;
      }
    }
  }
  .pictures {
    .img-wrapper {
      position: relative;
      height: 155px;
      background-size: cover;
      .hover {
        display: none;
        position: absolute;
        top: 0;
        left: 0;
        bottom: 0;
        right: 0;
        padding: 40px;
        background-color: transparentize($aqua, 0.5);
        a {
          color: $white;
          display: block;
          padding-left: 30%;
          background-repeat: no-repeat;
          line-height: 32px;
        }
        .main {
          @include at2x('venue_wishlist_white_inactive', 32px, 32px);
          background-position: calc(30% - 32px); // background image width
          margin-bottom: 10px;
        }
        .delete {
          @include at2x('venue_wishlist_white_inactive', 32px, 32px);
          background-position: calc(30% - 32px); // background image width
        }
      }
      &:hover .hover {
        display: block;
      }
      &.fav:hover .hover {
        display: none;
      }
      &.fav:before {
        content: '*';
        position: absolute;
        top: 10px;
        left: 15px;
        color: $yellow;
        font-size: 30px;
        line-height: 1;
      }
    }
    .add-image {
      width: 100%;
      height: 155px;
      background: $yellow;
      position: relative;
      &:before {
        content: '+';
        position: absolute;
        top: calc(50% - 30px);
        height: 30px;
        width: 30px;
        text-align: center;
        border-radius: 100%;
        background-color: $black;
        left: calc(50% - 15px);
        color: $yellow;
        font-size: 30px;
        line-height: 30px;
        font-weight: 700;
      }
      &:after {
        content: 'Add an Image';
        position: absolute;
        text-transform: uppercase;
        width: 100%;
        height: 100%;
        margin-top: 50%;
        text-align: center;
        font-weight: 700;
      }
    }
  }
}

